--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -15,6 +15,7 @@
         <link rel="shortcut icon" href="{% static "images/favicon.ico" %}" type="image/ico">
 
         {% bootstrap_css %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/extra.css' %}" />
 
         {% block extra_css %}{% endblock %}
 
