--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -18,7 +18,7 @@
                         {% bootstrap_field form.product_code show_label=False %}
                     </div>
                     <div class="col-sm-4">
-                        <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#scan_product_modal">Scan a barcode</a>
+                        <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#scan_product_modal" data-bs-backdrop="static" >Scan a barcode</a>
                     </div>
                 </div>
             </div>
