Basic OFF & OSM integration

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -55,6 +55,7 @@
 
         {% block script %}
         {% bootstrap_javascript %}
+        <script type="text/javascript" src="{% static "js/extra.js" %}"></script>
         {% endblock %}
 
         {% block extra_js %}{% endblock %}
