--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -2,3 +2,17 @@ main {
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+#location_osm_search_results > ul {
+    list-style: none;
+    padding-left: 0;
+}
+#location_osm_search_results > ul > li {
+    padding: 5px;
+    margin-bottom: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.175);
+    border-radius: 0.375rem;
+}
+#location_osm_search_results > ul > li:last-child {
+    margin-bottom: 0;
+}
