--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,5 +1,5 @@
 <footer class="py-3 my-4 border-top">
-    <div class="container">
+    <div class="container max-width-940">
         <div class="row">
             <div class="col-md-4 my-auto">
                 <p class="mb-0 text-muted">Open Prices</p>
