--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+    <div class="container max-width-940">
         <a class="navbar-brand" href="{% url 'pages:home' %}">Open Prices</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
