--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -1,88 +1,86 @@
 {% extends "layouts/base.html" %}
 {% load django_bootstrap5 %}
 
-{% block title %}Add a price - {{ block.super }}{% endblock %}
+{% block title %}Add a price {{ block.super }}{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Add a price</h1>
+<h1>Add a price</h1>
 
-    <form id="price_create_form" method="POST" action="">
-        {% csrf_token %}
+<form id="price_create_form" method="POST" action="">
+    {% csrf_token %}
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">
-                    🏷 Product details
-                    <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#scan_product_modal" data-bs-backdrop="static">Scan a barcode</a>
-                </h5>
-                <div class="row">
-                    <div class="col-md-4">
-                        {% bootstrap_field form.product_code show_label=False %}
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">
+                🏷 Product details
+                <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#scan_product_modal" data-bs-backdrop="static">Scan a barcode</a>
+            </h5>
+            <div class="row">
+                <div class="col-md-4">
+                    {% bootstrap_field form.product_code show_label=False %}
                 </div>
             </div>
         </div>
+    </div>
 
-        <br />
+    <br />
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">💲 Product price</h5>
-                <div class="row">
-                    <div class="col-md-4">
-                        {% bootstrap_field form.price show_label=False %}
-                    </div>
-                    <div class="col-md-4 col-lg-2">
-                        {% bootstrap_field form.currency show_label=False %}
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">💲 Product price</h5>
+            <div class="row">
+                <div class="col-md-4">
+                    {% bootstrap_field form.price show_label=False %}
+                </div>
+                <div class="col-md-4 col-lg-2">
+                    {% bootstrap_field form.currency show_label=False %}
                 </div>
             </div>
         </div>
+    </div>
 
-        <br />
+    <br />
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">
-                    🌍 Location
-                    <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#search_location_modal" data-bs-backdrop="static">Search in OSM</a>
-                </h5>
-                <div class="row">
-                    <div class="col-md-4">
-                        {% bootstrap_field form.location show_label=False %}
-                    </div>
-                    <div class="col-md-4 col-lg-2">
-                        {% bootstrap_field form.location_osm_id show_label=False %}
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">
+                🌍 Location
+                <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#search_location_modal" data-bs-backdrop="static">Search in OSM</a>
+            </h5>
+            <div class="row">
+                <div class="col-md-4">
+                    {% bootstrap_field form.location show_label=False %}
+                </div>
+                <div class="col-md-4 col-lg-2">
+                    {% bootstrap_field form.location_osm_id show_label=False %}
                 </div>
             </div>
         </div>
+    </div>
 
-        <br />
+    <br />
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">📅 Date</h5>
-                <div class="row">
-                    <div class="col-md-4">
-                        {% bootstrap_field form.date show_label=False %}
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">📅 Date</h5>
+            <div class="row">
+                <div class="col-md-4">
+                    {% bootstrap_field form.date show_label=False %}
                 </div>
             </div>
         </div>
+    </div>
 
-        <br />
+    <br />
 
-        <div class="row">
-            <div class="col">
-                {% bootstrap_button button_type="submit" button_class="btn-primary" content="Create" %}
-                {# {% bootstrap_button button_type="reset" button_class="btn-secondary" content=_("Cancel") %} #}
-                <a class="btn btn-secondary" href="{% url 'pages:home' %}">Cancel</a>
-            </div>
+    <div class="row">
+        <div class="col">
+            {% bootstrap_button button_type="submit" button_class="btn-primary" content="🚀 Create" %}
+            {# {% bootstrap_button button_type="reset" button_class="btn-secondary" content=_("Cancel") %} #}
+            <a class="btn btn-secondary" href="{% url 'pages:home' %}">Cancel</a>
         </div>
-    </form>
-</div>
+    </div>
+</form>
 {% endblock %}
 
 {% block modals %}
