--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -49,7 +49,7 @@
             </h5>
             <div class="row">
                 <div class="col-md-4">
-                    {% bootstrap_field form.location show_label=False %}
+                    {% bootstrap_field form.location_name show_label=False %}
                 </div>
                 <div class="col-md-4 col-lg-2">
                     {% bootstrap_field form.location_osm_id show_label=False %}
