Fix whitenoise config

--- a/templates/www/home.html
+++ b/templates/www/home.html
@@ -23,7 +23,7 @@
 
 {% if price_count %}
     <br />
-    <div class="alert alert-success mb-0" role="alert">
+    <div class="alert alert-info mb-0" role="alert">
         Already {{ price_count }} price{{ price_count|pluralize }}!
     </div>
 {% endif %}
