--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -8,7 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'prices:create' %}">Add price</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'prices:list' %}">All prices</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline" aria-current="page" href="{% url 'prices:create' %}">Add price</a>
                 </li>
             </ul>
         </div>
