--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" aria-current="page" href="{% url 'prices:list' %}">All prices</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-outline" aria-current="page" href="{% url 'prices:create' %}">Add price</a>
+                    <a class="nav-link btn btn-outline-secondary" aria-current="page" href="{% url 'prices:create' %}">Add a price</a>
                 </li>
             </ul>
         </div>
