--- a/templates/prices/list.html
+++ b/templates/prices/list.html
@@ -5,7 +5,7 @@
 {% block title %}All prices{{ block.super }}{% endblock %}
 
 {% block content %}
-<h1>All prices</h1>
+<h1>All prices <span class="fs-3 text-muted">{{ prices.count }}</span></h1>
 
 <div class="row">
     <div class="col-12">
