--- a/templates/www/home.html
+++ b/templates/www/home.html
@@ -24,7 +24,7 @@
 {% if price_count %}
     <br />
     <div class="alert alert-info mb-0" role="alert">
-        Already {{ price_count }} price{{ price_count|pluralize }}!
+        Already <a href="{% url 'prices:list' %}">{{ price_count }} price{{ price_count|pluralize }}</a>!
     </div>
 {% endif %}
 
