--- a/templates/prices/_scan_product_modal.html
+++ b/templates/prices/_scan_product_modal.html
@@ -2,11 +2,16 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Scan a barcode with your camera</h5>
+                <h5 class="modal-title" id="exampleModalLabel">
+                    Scan a barcode with your camera<br />
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div id="reader" width="500px"></div>
+            </div>
+            <div class="modal-footer">
+                <span class="text-muted">powered by <a href="https://github.com/mebjas/html5-qrcode" target="_blank">html5-qrcode</a></span>
             </div>
         </div>
     </div>
