--- a/templates/prices/_search_location_modal.html
+++ b/templates/prices/_search_location_modal.html
@@ -16,6 +16,9 @@
                 </div>
                 <section id="location_osm_search_results" class="mt-3"></section>
             </div>
+            <div class="modal-footer">
+                <span class="text-muted">powered by <a href="https://nominatim.openstreetmap.org" target="_blank">Nominatim</a></span>
+            </div>
         </div>
     </div>
 </div>
