--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,10 +1,10 @@
 <footer class="py-3 my-4 border-top">
     <div class="container max-width-940">
         <div class="row">
-            <div class="col-md-4 my-auto">
+            <div class="col-6 col-md-4 my-auto">
                 <p class="mb-0 text-muted">Open Prices</p>
             </div>
-            <div class="col-md-4 offset-md-4 right">
+            <div class="col-6 offset-md-4 right">
                 <ul class="nav">
                     <li class="nav-item ms-auto">
                         <a href="{{ GITHUB_REPO_URL }}" target="_blank" class="nav-link px-2 text-muted">Github</a>
