--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -9,65 +9,43 @@
 <form id="price_create_form" method="POST" action="">
     {% csrf_token %}
 
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">
-                🏷 Product details
-                <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#scan_product_modal" data-bs-backdrop="static">Scan a barcode</a>
-            </h5>
-            <div class="row">
-                <div class="col-md-4">
-                    {% bootstrap_field form.product_code show_label=False %}
-                </div>
-            </div>
+    <h5>
+        🏷 Product details
+        <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#scan_product_modal" data-bs-backdrop="static">Scan a barcode</a>
+    </h5>
+    <div class="row">
+        <div class="col-md-4">
+            {% bootstrap_field form.product_code show_label=False %}
         </div>
     </div>
 
-    <br />
-
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">💲 Product price</h5>
-            <div class="row">
-                <div class="col-md-4">
-                    {% bootstrap_field form.price show_label=False %}
-                </div>
-                <div class="col-md-4 col-lg-2">
-                    {% bootstrap_field form.currency show_label=False %}
-                </div>
-            </div>
+    <h5>💲 Product price</h5>
+    <div class="row">
+        <div class="col-8 col-sm-4">
+            {% bootstrap_field form.price show_label=False %}
+        </div>
+        <div class="col-4 col-sm-2">
+            {% bootstrap_field form.currency show_label=False %}
         </div>
     </div>
 
-    <br />
-
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">
-                🌍 Location
-                <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#search_location_modal" data-bs-backdrop="static">Search in OSM</a>
-            </h5>
-            <div class="row">
-                <div class="col-md-4">
-                    {% bootstrap_field form.location_name show_label=False %}
-                </div>
-                <div class="col-md-4 col-lg-2">
-                    {% bootstrap_field form.location_osm_id show_label=False %}
-                </div>
-            </div>
+    <h5>
+        🌍 Location
+        <a href="#" class="btn btn-sm btn-outline-primary ml-3" data-bs-toggle="modal" data-bs-target="#search_location_modal" data-bs-backdrop="static">Search in OSM</a>
+    </h5>
+    <div class="row">
+        <div class="col-md-4">
+            {% bootstrap_field form.location_name show_label=False %}
+        </div>
+        <div class="col-md-4 col-lg-2">
+            {% bootstrap_field form.location_osm_id show_label=False %}
         </div>
     </div>
 
-    <br />
-
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">📅 Date</h5>
-            <div class="row">
-                <div class="col-md-4">
-                    {% bootstrap_field form.date show_label=False %}
-                </div>
-            </div>
+    <h5>📅 Date</h5>
+    <div class="row">
+        <div class="col-md-4">
+            {% bootstrap_field form.date show_label=False %}
         </div>
     </div>
 
