--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -4,7 +4,7 @@
             <div class="col-6 col-md-4 my-auto">
                 <p class="mb-0 text-muted">Open Prices</p>
             </div>
-            <div class="col-6 offset-md-4 right">
+            <div class="col-6 col-md-4 offset-md-4 right">
                 <ul class="nav">
                     <li class="nav-item ms-auto">
                         <a href="{{ GITHUB_REPO_URL }}" target="_blank" class="nav-link px-2 text-muted">Github</a>
