--- a/templates/prices/_scan_product_modal.html
+++ b/templates/prices/_scan_product_modal.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="modal fade" id="scan_product_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -18,11 +20,11 @@
 </div>
 
 
-<script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
+<script type="text/javascript" src="{% static "js/html5-qrcode@2.3.8.min.js" %}"></script>
 <script type="text/javascript">
 function onScanSuccess(decodedText, decodedResult) {
   console.log(`Code matched = ${decodedText}`, decodedResult);
-  // update input
+  // update price form
   document.getElementById("id_product_code").value = decodedText;
   // close modal
   var modalElement = document.getElementById("scan_product_modal");
