--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -4,7 +4,7 @@
 {% block title %}Add a price{{ block.super }}{% endblock %}
 
 {% block content %}
-<h1>Add a price</h1>
+<h1 class="mb-3">Add a price</h1>
 
 <form id="price_create_form" method="POST" action="">
     {% csrf_token %}
@@ -37,7 +37,7 @@
         <div class="col-md-4">
             {% bootstrap_field form.location_name show_label=False %}
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-2">
             {% bootstrap_field form.location_osm_id show_label=False %}
         </div>
     </div>
