Improve look & feel

--- a/templates/www/home.html
+++ b/templates/www/home.html
@@ -12,9 +12,9 @@
         <p class="card-text">
             <strong>A simple web app to add product prices</strong>
             <ol>
-                <li>Scan the product barcode</li>
-                <li>Add its current price</li>
-                <li>We'll also need your location details (OpenStreetMap node)</li>
+                <li>Scan the product barcode 🏷</li>
+                <li>Add its current price 💲</li>
+                <li>We'll also need your location details 🌍 <small class="text-muted">thanks to OpenStreetMap</small></li>
                 <li>That's it!</li>
             </ol>
         </p>
