--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'prices:list' %}">All prices</a>
+                    <a class="nav-link {% if 'prices' in request.path and 'create' not in request.path %}active fw-bold{% endif %}" href="{% url 'prices:list' %}">All prices</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-outline-secondary" aria-current="page" href="{% url 'prices:create' %}">Add a price</a>
+                    <a class="nav-link {% if 'create' in request.path %}active fw-bold{% endif %}" href="{% url 'prices:create' %}">Add a price</a>
                 </li>
             </ul>
         </div>
