--- a/templates/prices/_search_location_modal.html
+++ b/templates/prices/_search_location_modal.html
@@ -128,6 +128,10 @@ document.addEventListener("DOMContentLoaded", function() {
         populateRecentLocations();
     });
 
-
+    searchInputElement.onkeydown = function(event) {
+        if(event.keyCode == 13) {
+            nominatimSearch()
+        }
+    };
 });
 </script>
