Product API list endpoint & serializer

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -7,6 +7,9 @@
             <div class="col-6 col-md-4 offset-md-4 right">
                 <ul class="nav">
                     <li class="nav-item ms-auto">
+                        <a href="{% url 'api:swagger-ui' %}" target="_blank" class="nav-link px-2 text-muted">API</a>
+                    </li>
+                    <li class="nav-item ms-auto">
                         <a href="{{ GITHUB_REPO_URL }}" target="_blank" class="nav-link px-2 text-muted">Github</a>
                     </li>
                 </ul>
