--- a/templates/prices/create.html
+++ b/templates/prices/create.html
@@ -35,10 +35,10 @@
     </h5>
     <div class="row">
         <div class="col-md-4">
-            {% bootstrap_field form.location_osm_name show_label=False %}
+            {% bootstrap_field form.location_osm_id show_label=False %}
         </div>
         <div class="col-md-2">
-            {% bootstrap_field form.location_osm_id show_label=False %}
+            {% bootstrap_field form.location_osm_type show_label=False %}
         </div>
     </div>
 
